update process form to prevent using deprecated __autoload()

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="message-warning"></div>
       </div>  
     </div>
-    <button type="submit" id="submit" class="btn btn-success g-recaptcha" name="submit" data-sitekey="PUBLIC_KEY"
+    <button type="submit" id="submit" class="btn btn-success g-recaptcha" name="submit" data-sitekey="ENTER SITEKEY HERE"
     data-callback="submitForm" data-size="invisible">
     <i class="fa fa-check"></i> Send Message</button>
     <div id="captcha-warning"></div>
